--- a/Banco GOI/pom.xml
+++ b/Banco GOI/pom.xml
@@ -53,7 +53,7 @@
           <execution>
             <id>tomcat-run</id>
             <goals>
-              <goal>exec-war</goal>
+              <goal>run</goal>
             </goals>
             <phase>package</phase>
             <configuration>
