--- a/Banco GOI/pom.xml
+++ b/Banco GOI/pom.xml
@@ -1,82 +1,148 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+  <!-- ============================================================= -->
+  <!--   Identificação do projeto                                   -->
+  <!-- ============================================================= -->
   <modelVersion>4.0.0</modelVersion>
+
   <groupId>br.com.BancoGOI</groupId>
   <artifactId>GOI</artifactId>
-  <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>carstore Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+  <packaging>war</packaging>
+
+  <name>BancoGOI Webapp</name>
+
+  <!-- ============================================================= -->
+  <!--   Propriedades globais — concentram versões e flags           -->
+  <!-- ============================================================= -->
+  <properties>
+    <!-- Versão alvo da linguagem (byte-code)                        -->
+    <!-- Troque para 17 se for usar Tomcat 9+                         -->
+    <maven.compiler.release>8</maven.compiler.release>
+
+    <!-- Encoding padrão dos fontes -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <!-- Versões de dependências / plugins -->
+    <mysql.version>8.0.32</mysql.version>
+    <gson.version>2.10.1</gson.version>
+    <junit.version>4.13.2</junit.version>
+
+    <compiler.plugin.version>3.11.0</compiler.plugin.version>
+    <war.plugin.version>3.3.2</war.plugin.version>
+    <tomcat.plugin.version>2.2</tomcat.plugin.version> <!-- tomcat7-maven-plugin -->
+  </properties>
+
+  <!-- ============================================================= -->
+  <!--   Dependências                                                -->
+  <!-- ============================================================= -->
   <dependencies>
+
+    <!-- Conector MySQL (coordenadas novas, reverse-DNS) -->
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>8.0.32</version>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
+      <version>${mysql.version}</version>
+      <scope>runtime</scope>
     </dependency>
 
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-
+    <!-- API Servlet fornecida pelo contêiner (Tomcat) -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <version>3.0.1</version>
       <scope>provided</scope>
     </dependency>
-    <dependency>
-      <groupId>com.google.code.gson</groupId>
-      <artifactId>gson</artifactId>
-      <version>2.10.1</version>
-    </dependency>
 
+    <!-- JSTL -->
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+
+    <!-- Gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>${gson.version}</version>
+    </dependency>
+
+    <!-- Testes -->
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
+  <!-- ============================================================= -->
+  <!--   Build e plugins                                             -->
+  <!-- ============================================================= -->
   <build>
     <finalName>BancoGOI</finalName>
+
     <plugins>
+
+      <!-- Compilador -->
       <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <version>2.1</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>${compiler.plugin.version}</version>
         <configuration>
-          <path>/</path>
+          <!-- release cobre source/target em JDK 9+ -->
+          <release>${maven.compiler.release}</release>
         </configuration>
-        <executions>
-          <execution>
-            <id>tomcat-run</id>
-            <goals>
-              <goal>run</goal>
-            </goals>
-            <phase>package</phase>
-            <configuration>
-              <enableNaming>false</enableNaming>
-            </configuration>
-          </execution>
-        </executions>
       </plugin>
+
+      <!-- Gerador do WAR -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>3.2.2</version>
+        <version>${war.plugin.version}</version>
         <configuration>
-          <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
           <warSourceDirectory>src/main/webapp</warSourceDirectory>
+          <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
         </configuration>
       </plugin>
+
+      <!-- Tomcat 7 para rodar a aplicação localmente -->
+      <!-- Se migrar para Java 17, troque por tomcat9-maven-plugin -->
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>${tomcat.plugin.version}</version>
+
+        <configuration>
+          <path>/</path>
+          <enableNaming>false</enableNaming>
+        </configuration>
+
+        <executions>
+          <execution>
+            <id>tomcat-run</id>
+            <phase>package</phase>
+            <goals>
+              <goal>run</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+
     </plugins>
   </build>
+
+  <!-- Repositório central já vem configurado por padrão,          -->
+  <!-- mas deixamos explícito para não restar dúvidas              -->
   <repositories>
     <repository>
       <id>central</id>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </repositories>
+
 </project>
