--- a/front-end/.vscode/settings.json
+++ b/front-end/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "livePreview.defaultPreviewPath": "/transferencia/index.html"
+    "livePreview.defaultPreviewPath": "/extrato/index.html"
 }
