fix: suporte de connections usando pools performáticas

--- a/Banco GOI/pom.xml
+++ b/Banco GOI/pom.xml
@@ -78,6 +78,15 @@
       <version>${junit.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- Connection-pool leve e rápido -->
+    <dependency>
+      <groupId>com.zaxxer</groupId>
+      <artifactId>HikariCP</artifactId>
+      <version>5.1.0</version>
+    </dependency>
+
+
   </dependencies>
 
   <!-- ============================================================= -->
@@ -132,6 +141,7 @@
           </execution>
         </executions>
       </plugin>
+
 
     </plugins>
   </build>
