fix: rebranding GOIA BANKLINE e ajustes finos

--- a/Banco GOI/src/main/webapp/WEB-INF/web.xml
+++ b/Banco GOI/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Banco GOI Web Application</display-name>
+  <display-name>Banco GOIA Web Application</display-name>
 
   <!-- Página de boas-vindas -->
   <welcome-file-list>
