fix: redirecionamento para aws

--- a/Banco GOI/src/main/resources/app.properties
+++ b/Banco GOI/src/main/resources/app.properties
@@ -1,16 +1,16 @@
-# Configurações da aplicação para diferentes ambientes
-# Configuração dinâmica baseada no ambiente
+# Configuraï¿½ï¿½es da aplicaï¿½ï¿½o para diferentes ambientes
+# Configuraï¿½ï¿½o dinï¿½mica baseada no ambiente
 app.environment=${APP_ENVIRONMENT:local}
 app.domain=${APP_DOMAIN:localhost:8080}
 app.protocol=${APP_PROTOCOL:http}
 app.context.path=${CONTEXT_PATH:/BancoGOI}
 
-# Configurações AWS
+# Configuraï¿½ï¿½es AWS
 aws.cloudfront.domain=${CLOUDFRONT_DOMAIN:}
 aws.route53.domain=${ROUTE53_DOMAIN:}
 aws.ec2.public.ip=${EC2_PUBLIC_IP:}
 
-# Configurações locais
+# Configuraï¿½ï¿½es locais
 local.host=localhost
 local.port=8080
 local.protocol=http
